Мега-Учебник Flask, Часть XV: Улучшение структуры приложения

--- a/babel.cfg
+++ b/babel.cfg
@@ -1,5 +1,8 @@
 [python: app/**.py]
-[jinja2: app/templates/**.html]
+[jinja2: app/**.html]
+[jinja2: app/auth/templates**.html]
+[jinja2: app/main/templates**.html]
+[jinja2: app/errors/templates**.html]
 extensions=jinja2.ext.autoescape,jinja2.ext.with_
 
 ;flask translate init LANG добавить новый язык
