--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 alembic==1.4.3
 Babel==2.8.0
+bcrypt==3.2.0
 blinker==1.4
+cache==1.0.3
 certifi==2020.11.8
+cffi==1.14.3
 chardet==3.0.4
 click==7.1.2
 dnspython==2.0.0
@@ -23,6 +26,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 Mako==1.1.3
 MarkupSafe==1.1.1
+pycparser==2.20
 PyJWT==1.7.1
 python-dateutil==2.8.1
 python-dotenv==0.15.0
